chore: upd loading template, upd redirect, add DSN & release passing to the Sentry

--- a/spa-loading-template.html
+++ b/spa-loading-template.html
@@ -1,6 +1,9 @@
 <!-- https://github.com/barelyhuman/snips/blob/dev/pages/css-loader.md -->
-<div class="loader"></div>
+<div class="loader" />
 <style>
+html {
+  background: #0f172a;  
+}
 .loader {
   display: block;
   position: fixed;
